<resources>
    <string name="app_name">Analisador B3</string>
    <string name="stocks">Ações</string>
    <string name="my_stocks">Minhas Ações</string>
    <string name="open">Abertura</string>
    <string name="previous_close">Fechamento Anterior</string>
    <string name="day_change">Variação do dia</string>
    <string name="volume">Volume</string>
    <string name="average_change_3">Variação Média 3 Meses</string>
    <string name="no_internet">Sem Conexão de Rede</string>
    <string name="alpha_vantage_request_per_minute_exceeded">Você excedeu 5 requisições por minuto, aguarde e tente novamente.</string>
    <string name="world_trading_day_limit_exceeded">Você excedeu o limite diario de requisições</string>
    <string name="search_hint">Pesquisar...</string>
    <string name="saved">Salvo</string>
    <string name="stocks_saved_limit">Você já atingiu o limite de itens salvos</string>
    <string name="stop_follow">Parar de Seguir</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="removed">Removido</string>
    <string name="remove_fail">Falha ao remover</string>
    <string name="wallet">Carteira</string>
    <string name="empty_wallet">Sua carteira está vazia</string>
    <string name="empty_search">A busca não retornou resultados</string>
    <string name="one_day">1D</string>
    <string name="tree_days">3D</string>
    <string name="one_week">1S</string>
    <string name="one_month">1M</string>
    <string name="six_months">6M</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics">Estatisticas</string>
    <string name="day_low">Minima</string>
    <string name="day_high">Maxima</string>
</resources>
